--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,8 @@
 input:invalid, textarea:invalid {
-    background-color: yellow;
+    color: red
+}
+
+.error {
+    color: red;
+    font-weight: bold;
 }
